start work on gopro video decoding