@@ -19,6 +19,9 @@
         <module>cicp</module>
         <!-- <module>sidd</module> -->
         <module>jpeg2000</module>
+        <module>goprotools</module>
+        <module>mpeg4</module>
+        <module>gopro</module>
     </modules>
     <properties>
         <googleformatter.maven.plugin.version>1.7.5</googleformatter.maven.plugin.version>
@@ -91,7 +94,7 @@
                         <compilerArgs>
                             <arg>--enable-preview</arg>
                             <arg>-Xlint:unchecked</arg>
-                            <arg>-proc:full</arg>
+                            <arg>-proc:none</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
